# testRtl

./: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py
app/: config.py  main.py
app/handlers/: __init__.py
app/handlers/base/: handlers.py  text.py
tests/: conftest.py  test_aggregation.py
tests/data/: sample_collection.json
utils/salary_aggregation/: exeptions.py  models.py  salary_aggregation.py
utils/storage/: mongo.py
